refactor: Make DummyVolumes task-specific only (BREAKING CHANGE)
BREAKING CHANGE: Physio configuration file structure has changed.

The global 'DummyVolumes' field has been removed. All task-specific
dummy volume definitions must now be provided in a 'DummyVolumes' dictionary.

Old structure (deprecated):
{
  "DummyVolumes": 5,
  "DummyVolumesPerTask": { "task-rest": 5, "task-motor_run-01": 3 }
}

New structure (required):
{
  "DummyVolumes": { "task-rest": 5, "task-motor_run-01": 3 }
}

Changes:
- Removed global default DummyVolumes value
- Renamed DummyVolumesPerTask to DummyVolumes
- Configuration file is now required (no defaults)
- Missing task definitions cause explicit errors with helpful messages
- Updated load_physio_config() to validate DummyVolumes is a dict
- Updated get_dummy_volumes_for_task() to raise KeyError if task not found
- Updated import_physio_inhouse() validation and logging
- Updated all documentation (README.md, import_data/README.md)
- Updated example_physio_config.json with new structure
- Added breaking change documentation in PHYSIO_PROCESSING_CHANGES.md

Migration: Users must update their physio.json configs by removing the
global DummyVolumes field and ensuring all tasks/runs are in the new
DummyVolumes dictionary structure.

--- a/example_physio_config.json
+++ b/example_physio_config.json
@@ -1,14 +1,11 @@
 {
-  "DummyVolumes": 5,
-  "DummyVolumesPerTask": {
-    "_comment": "Override DummyVolumes for specific task/run combinations",
-    "_example_task-rest": 5,
-    "_example_task-motor_run-01": 3,
-    "_example_task-motor_run-02": 4
+  "DummyVolumes": {
+    "task-rest": 5,
+    "task-motor_run-01": 3,
+    "task-motor_run-02": 4,
+    "_comment": "Specify DummyVolumes (number of dummy scans) for each task or task/run combination"
   },
-  "_comment": "Configuration for in-house physiological data processing",
   "_description": {
-    "DummyVolumes": "Default number of dummy volumes at the start of fMRI acquisition. StartTime will be calculated as: 30s + (TR × DummyVolumes)",
-    "DummyVolumesPerTask": "Optional: Override DummyVolumes for specific task or task/run combinations. Keys should match BIDS naming: 'task-<taskname>' or 'task-<taskname>_run-<runnum>'"
+    "DummyVolumes": "Map of task-specific dummy volumes. Keys should match BIDS naming: 'task-<taskname>' or 'task-<taskname>_run-<runnum>'. StartTime will be calculated as: -(30s + TR × DummyVolumes)"
   }
 }
